fixing alignments

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -148,7 +148,7 @@ audio {
 
 .result-section h2 {
   font-size: 28px;
-  margin-bottom: 10px;
+  margin-bottom: 9px;
   color: var(--app-white);
 }
 
